k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
    version: green
  ports:
  - protocol: TCP
    port: 4040
    targetPort: 4000
  type: ClusterIP
